ft: user and homepage extending

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,5 +3,5 @@
 
 {% block content %}
 <h1 class="mt-5 p-3">Welcome User</h1>
-
+<a class="mx-4" href="{{ url_for('home') }}">Home Page</a>
 {% endblock %}
