--- a/templates/register.html
+++ b/templates/register.html
@@ -2,13 +2,23 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-md-3">COLUMN 1</div>
-    <div class="col-md-3">COLUMN 2
+    <div class="col-3"></div>
+    <div class="col-6">
         <form action="" method="post">
           {{ form.hidden_tag() }}
+         <fieldset>
+            <legend>
+                Join Pitches TODAY!
+            </legend>
+          <div class="form-group">
+              {{ form.username.label(class="form-control-label") }}
+              {{ form.username(class="form-control-input") }}
+
+          </div>
+         </fieldset>
         </form>
     </div>
-    <div class="col-md-3">COLUMN 3</div>
+    <div class="col-3"></div>
 
 </div>
 
