--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
         <form action="" method="post">
           {{ form.hidden_tag() }}
          <fieldset>
-            <legend>
+            <legend class="mt-5">
                 Join Pitches TODAY!
             </legend>
           <div class="form-group">
@@ -15,6 +15,27 @@
               {{ form.username(class="form-control-input") }}
 
           </div>
+          <div class="form-group">
+            {{ form.email.label(class="form-control-label") }}
+            {{ form.email(class="form-control-input") }}
+
+        </div>
+        <div class="form-group">
+            {{ form.password.label(class="form-control-label") }}
+            {{ form.password(class="form-control-input") }}
+
+        </div>
+        <div class="form-group">
+            {{ form.confirm_password.label(class="form-control-label") }}
+            {{ form.confirm_password(class="form-control-input") }}
+
+        </div>
+
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info mt-4") }}
+
+        </div>
+
          </fieldset>
         </form>
     </div>
