ft: added you already have an account

--- a/templates/register.html
+++ b/templates/register.html
@@ -38,9 +38,16 @@
 
          </fieldset>
         </form>
+
+<div class="border-top-pt-3">
+    <small class="text-muted">
+        You already have an account? <a href="{{ url_for('login') }}">Login</a>
+    </small>
+    </div>
     </div>
     <div class="col-3"></div>
 
 </div>
+
 
 {% endblock content %}
