--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info mt-4") }}
+            {{ form.submit(class="btn btn-outline-info my-4") }}
 
         </div>
 
