--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,45 @@
-<h1>Login</h1>
+{% extends "base.html" %}
+{% block content %}
+
+<div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+        <form action="" method="post">
+          {{ form.hidden_tag() }}
+         <fieldset>
+            <legend class="mt-5">
+                Welcome Back to Pitches 
+            </legend>
+         
+          <div class="form-group">
+            {{ form.email.label(class="form-control-label") }}
+            {{ form.email(class="form-control-input") }}
+
+        </div>
+        <div class="form-group">
+            {{ form.password.label(class="form-control-label") }}
+            {{ form.password(class="form-control-input") }}
+
+        </div>
+     
+
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info my-4") }}
+
+        </div>
+
+         </fieldset>
+        </form>
+
+<div class="border-top-pt-3">
+    <small class="text-muted">
+        Don't have and Account? <a href="{{ url_for('register') }}">Create and Account Here</a>
+    </small>
+    </div>
+    </div>
+    <div class="col-3"></div>
+
+</div>
+
+
+{% endblock content %}
