--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -31,7 +31,11 @@ rel="stylesheet"
 <body>
 
     {% include "nav.html" %}
-     
+     <div class="container">
+         {% with messages = get_flashed_messages(with_categories=true) %}
+         {% endwith %}
+
+     </div>
     {% block content %}
     {% endblock content %}
 
