ft: flash messagess

--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -33,6 +33,13 @@ rel="stylesheet"
     {% include "nav.html" %}
      <div class="container">
          {% with messages = get_flashed_messages(with_categories=true) %}
+         <div class="my-1">
+            {% if messages%}
+            {% for category, message in messages %}
+            <div class="alert alert-{{category}}"></div>
+            {% endif%}
+
+         </div>
          {% endwith %}
 
      </div>
