--- a/post/templates/index.html
+++ b/post/templates/index.html
@@ -3,22 +3,34 @@
 
 {% block content %}
 
-
-<div class="row">
     {% for post in posts %}
-    <div class="col-md-4">
-        <div class="card mt-3">
-            <div class="card-header">{{post.author}}</div>
-            <div class="card-body">
-              <h5 class="card-title">{{post.title}}</h5>
-              <p class="card-text">{{post.content}}</p>
-              <a href="#" class="btn btn-primary">Button</a>
-            </div>
-            <div class="card-footer text-muted">{{post.date}}</div>
+
+<a href="">
+    <div class="card mt-3">
+        <div class="card-header">
+            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" alt="user image"
+            height="35"
+            width="35"
+            class="roounded-circle"
+            >
+            <a href="" class="text-capitalize">{{post.author}}</a>
+        </div>
+        <div class="card-body p-2">
+         <blockquote>
+            <h5 class="card-title">{{post.title}}</h5>
+            <footer>
+                <cite>
+                    <p class="card-text">{{post.content}}</p>
+                    <br><small><div class="card-footer text-muted">{{post.date}}</div>
+                    </small>
+                </cite>
+            </footer>
+            <a href="#" class="btn btn-primary">Comment</a>
+         </blockquote>
         </div>
     </div>
+</a>
     {% endfor %}
 
-</div>
 
 {% endblock %}
