--- a/post/templates/nav.html
+++ b/post/templates/nav.html
@@ -34,7 +34,7 @@
           
             {% if current_user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('login') }}">Add your favourite Pitch</a>
+              <a class="nav-link" href="{{ url_for('create') }}">Add your favourite Pitch</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
