--- a/post/templates/create.html
+++ b/post/templates/create.html
@@ -8,17 +8,17 @@
           {{ form.hidden_tag() }}
          <fieldset>
             <legend class="mt-5">
-                You may create Pitches
+                You may now create your Pitches
             </legend>
          
           <div class="form-group">
             {{ form.title.label(class="form-control-label") }}
-            {{ form.title(class="form-control-input") }}
+            {{ form.title(class="form-control") }}
 
         </div>
         <div class="form-group">
             {{ form.content.label(class="form-control-label") }}
-            {{ form.content(class="form-control-input") }}
+            {{ form.content(class="form-control") }}
 
         </div>
      
@@ -31,6 +31,9 @@
          </fieldset>
         </form>
 
+
+    </div>
+    <div class="col-3"></div>
 
 </div>
 
