--- a/post/templates/nav.html
+++ b/post/templates/nav.html
@@ -101,7 +101,7 @@
             aria-expanded="false"
           >
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+              src="https://raw.githubusercontent.com/DynastyElvis/Chat-My-PORTFOLIO/main/images/squareDp.jpg"
               class="rounded-circle"
               height="25"
               alt="Black and White Portrait of a Man"
