--- a/post/templates/create.html
+++ b/post/templates/create.html
@@ -8,7 +8,7 @@
           {{ form.hidden_tag() }}
          <fieldset>
             <legend class="mt-5">
-                You may now create your Pitches
+                Create your Pitches 
             </legend>
          
           <div class="form-group">
@@ -30,7 +30,6 @@
 
          </fieldset>
         </form>
-
 
     </div>
     <div class="col-3"></div>
