--- a/post/templates/login.html
+++ b/post/templates/login.html
@@ -13,12 +13,12 @@
          
           <div class="form-group">
             {{ form.email.label(class="form-control-label") }}
-            {{ form.email(class="form-control-input") }}
+            {{ form.email(class="form-control") }}
 
         </div>
         <div class="form-group">
             {{ form.password.label(class="form-control-label") }}
-            {{ form.password(class="form-control-input") }}
+            {{ form.password(class="form-control") }}
 
         </div>
      
@@ -33,7 +33,7 @@
 
 <div class="border-top-pt-3">
     <small class="text-muted">
-        Don't have and Account? <a href="{{ url_for('register') }}">Create and Account Here</a>
+        Don't have and Account? <a href="{{ url_for('register') }}">Create an Account Here</a>
     </small>
     </div>
     </div>
