--- a/post/templates/nav.html
+++ b/post/templates/nav.html
@@ -113,7 +113,7 @@
             aria-labelledby="navbarDropdownMenuAvatar"
           >
             <li>
-              <a class="dropdown-item" href="#">My profile</a>
+              <a class="dropdown-item" href="{ url_for('profile') }}">My profile</a>
             </li>
             <li>
               <a class="dropdown-item" href="{ url_for('logout') }}">Logout</a>
