account info of the logged in user

--- a/post/templates/profile.html
+++ b/post/templates/profile.html
@@ -5,11 +5,14 @@
 <div class="container">
     <div class="card p-3">
         <div class="account-info">
+          <div class="info-pic">
             <img src="https://raw.githubusercontent.com/DynastyElvis/Chat-My-PORTFOLIO/main/images/squareDp.jpg" alt="profile pic"
             class="img-fluid profile-image" />
+          </div>
+
         </div>
         <div>
-            <p class="info-username">Username</p>
+            <p class="info-name mx-3 mt-3">Username</p>
             <p class="info-username">Email</p>
         </div>
     </div>
