account info of the logged in user

--- a/post/templates/profile.html
+++ b/post/templates/profile.html
@@ -11,9 +11,9 @@
           </div>
 
         </div>
-        <div>
-            <p class="info-name mx-3 mt-3">Username</p>
-            <p class="info-username">Email</p>
+        <div class="info-name mx-3 mt-3">
+            <p>Username</p>
+            <p>Email</p>
         </div>
     </div>
 
