user updating profile

--- a/post/templates/profile.html
+++ b/post/templates/profile.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
        <fieldset>
           <legend class="mt-5">
